--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -40,6 +40,24 @@
 
     <div class="projects" id="projects">
       <h1 class="tittle">Projects</h1>
+      <div class="project-tile">
+        <a href="#"
+          ><div class="project">
+            <h1>someProjectHere</h1>
+            <p>someDescription</p>
+          </div>
+        </a>
+        <a href="#"
+          ><div class="project">
+            <h1>someProjectHere</h1>
+            <p>someDescription</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="contact" id="contact">
+      <h1 class="tittle">Contact Me</h1>
     </div>
 
     <script src="script.js"></script>
