--- a/index.html
+++ b/index.html
@@ -54,28 +54,48 @@
               <p>someDescription</p>
             </div>
           </a>
+          <a href="#"
+            ><div class="project project-tablet">
+              <h1>someProjectHere</h1>
+              <p>someDescription</p>
+            </div>
+          </a>
+          <a href="#"
+            ><div class="project project-tablet">
+              <h1>someProjectHere</h1>
+              <p>someDescription</p>
+            </div>
+          </a>
         </div>
       </div>
 
       <div class="contact" id="contact">
         <h1 class="tittle">Contact Me</h1>
         <div class="sm-tile">
-          <div class="grid">
-            <i class="fab fa-facebook-f"></i>
-            <p>Facebook</p>
-          </div>
-          <div class="grid">
-            <i class="fab fa-instagram"></i>
-            <p>Instagram</p>
-          </div>
-          <div class="grid">
-            <i class="fab fa-github"></i>
-            <p>Github</p>
-          </div>
-          <div class="grid">
-            <i class="fab fa-codepen"></i>
-            <p>Codepen</p>
-          </div>
+          <a href="https://www.facebook.com/profile.php?id=100073129131146" target="_blank">
+            <div class="grid">
+              <i class="fab fa-facebook-f"></i>
+              <p>Facebook</p>
+            </div>
+          </a>
+          <a href="https://www.instagram.com/eiaryuel/" target="_blank">
+            <div class="grid">
+              <i class="fab fa-instagram"></i>
+              <p>Instagram</p>
+            </div>
+          </a>
+          <a href="https://github.com/eiaryuel" target="_blank">
+            <div class="grid">
+              <i class="fab fa-github"></i>
+              <p>Github</p>
+            </div>
+          </a>
+          <a href="https://codepen.io/eiaryuel" target="_blank">
+            <div class="grid">
+              <i class="fab fa-codepen"></i>
+              <p>Codepen</p>
+            </div>
+          </a>
         </div>
       </div>
     </div>
